<resources>
    <string name="app_name">TRed</string>
    <string name="string_enter">记录</string>
    <string name="string_table">查询</string>
    <string name="string_chart">统计</string>
    <string name="string_setup">设置</string>
    <string name="string_blood_sugar">血糖值</string>
    <string name="string_delete">删除</string>
    <string name="string_all">全部</string>
    <string name="string_confirm">确认</string>
    <string name="string_cancel">取消</string>
    <string name="string_update">更新</string>
    <string name="string_export">导出</string>
    <string name="string_import">导入</string>

    <string name="confirm_enter_information">确认记录信息</string>
    <string name="confirm_deletion_message">确认删除信息</string>
    <string name="database_information">数据库信息展示</string>
    <string name="confirm_to_update">确认更新信息</string>
    <string name="update_tips">目前APP处理开发阶段，任何更新都将可能导致数据丢失，请谨慎选择！</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
