<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_enter">

    <fragment
        android:id="@+id/navigation_enter"
        android:name="com.yw1573.tred.fragment.EnterFragment"
        android:label="@string/string_enter"
        tools:layout="@layout/fragment_enter" />

    <fragment
        android:id="@+id/navigation_table"
        android:name="com.yw1573.tred.fragment.TableFragment"
        android:label="@string/string_table"
        tools:layout="@layout/fragment_table" />

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.yw1573.tred.fragment.ChartFragment"
        android:label="@string/string_chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/navigation_setup"
        android:name="com.yw1573.tred.fragment.SetupFragment"
        android:label="@string/string_setup"
        tools:layout="@layout/fragment_setup" />
</navigation>